reload swagger, and rebuild
Summary: 1. Reload swagger, rerun codegen, rebuild

Test Plan: 1. Build and lint passes

Reviewers: #product, scott

Reviewed By: #product, scott

Differential Revision: https://rockset.phacility.com/D7640
