# packages/cli/src/generator/swagger-generated.yaml
@@ -218,6 +218,33 @@ paths:
           description: "query executed successfully"
           schema:
             $ref: "#/definitions/QueryResponse"
+  /v1/orgs/self/queries/validations:
+    post:
+      tags:
+      - "Queries"
+      summary: "Validate Query"
+      description: "Validate a SQL query with Rockset's parser and planner."
+      operationId: "validate"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "body"
+        description: "JSON object"
+        required: true
+        schema:
+          $ref: "#/definitions/QueryRequest"
+      - name: "parameters"
+        in: "query"
+        required: false
+        type: "boolean"
+      responses:
+        200:
+          description: "query validated successfully"
+          schema:
+            $ref: "#/definitions/ValidateQueryResponse"
   /v1/orgs/self/users:
     get:
       tags:
@@ -2122,6 +2149,7 @@ definitions:
         - "TRIAL"
         - "TRIAL_EXPIRED"
         - "TRIAL_DEPLETED"
+        - "INACTIVE"
         - "DELETED"
       num_dedicated_pods:
         type: "integer"
@@ -2941,6 +2969,31 @@ definitions:
         type: "array"
         items:
           $ref: "#/definitions/OrgMembership"
+  ValidateQueryResponse:
+    type: "object"
+    required:
+    - "collections"
+    - "name"
+    - "parameters"
+    properties:
+      name:
+        type: "array"
+        example: "['commons.foo']"
+        description: "list of collection specified in query"
+        items:
+          type: "string"
+      collections:
+        type: "array"
+        example: "['commons.foo']"
+        description: "list of collection specified in query"
+        items:
+          type: "string"
+      parameters:
+        type: "array"
+        example: "['foo']"
+        description: "list of parameters specified in query"
+        items:
+          type: "string"
   Workspace:
     type: "object"
     properties:
